[package]
name = "cert-gen"
version = "0.1.0"
authors = ["Andrew Cleveland andrew.cleveland@hotmail.co.uk"]
license = "MIT OR Apache-2.0"
description = "Generate a self-signed certificate using a ca for use with mtls"
readme="readme.md"
homepage="https://github.com/grimvoodoo"
repository="https://github.com/grimvoodoo/cert-gen"
keywords = ["tls", "mtls", "certificate", "ca", "self-signed"]
catagories = ["network-programming", "security", "command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.48"
pem = "2.0.0"
rcgen = { version = "0.10.0", features = ["pem", "x509-parser"] }
ring = "0.16.20"
rustls = "0.21.0"
rustls-pemfile = "1.0.2"
time = "0.3.20"
x509 = "0.2.0"
